--- a/src/Coalesce.Starter.Web/Views/Api/EditorHtml.cshtml
+++ b/src/Coalesce.Starter.Web/Views/Api/EditorHtml.cshtml
@@ -1,5 +1,5 @@
 ﻿@using IntelliTect.Coalesce.DataAnnotations
-@using IntelliTect.Coalesce.Helpers
+@using IntelliTect.Coalesce.Knockout.Helpers
 @using System.Linq
 @using IntelliTect.Coalesce.TypeDefinition
 @using IntelliTect.Coalesce.Utilities
