--- a/src/Coalesce.Starter.Web/Styles/site.scss
+++ b/src/Coalesce.Starter.Web/Styles/site.scss
@@ -1,12 +1,13 @@
 ﻿body {
-    padding-top: 60px;
     padding-bottom: 20px;
+    background-color: #F8F8F8 !important;
 }
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
+    margin-top: 20px
 }
 
 /* Limit the size of a date in a grid */
@@ -52,10 +53,9 @@ span.select2-container--default .select2-selection--single .select2-selection__a
     height: 30px;
 }
 
-span.select2.select2-container {
+.select2-container {
     width: 100% !important;
 }
-
 
 dd:not(:last-of-type) {
     padding-bottom: 10px;
@@ -81,6 +81,7 @@ dd > div > .form-control-static {
 }
 
 .flex-card-container {
+     margin: 0 -10px ; // negate the margins on the cards along the outside edges so that things stay lined up
      display: flex;
      flex-flow: row wrap;
      justify-content: space-between;
@@ -148,3 +149,9 @@ dd > div > .form-control-static {
         flex-direction: column;
     }
 }
+
+
+
+
+
+@import "IntelliTectTheme.scss";
