--- a/src/Coalesce.Starter.Web/Views/_ViewImports.cshtml
+++ b/src/Coalesce.Starter.Web/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 @using Coalesce.Starter.Data;
 @using IntelliTect.Coalesce.Helpers
+@using IntelliTect.Coalesce.Knockout.Helpers
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 @*@inject Microsoft.ApplicationInsights.Extensibility.TelemetryConfiguration TelemetryConfiguration*@
