--- a/src/Coalesce.Starter.Web/Styles/site.scss
+++ b/src/Coalesce.Starter.Web/Styles/site.scss
@@ -1,13 +1,13 @@
 ﻿body {
+    padding-top: 60px;
     padding-bottom: 20px;
-    background-color: #F8F8F8 !important;
+    background-color: #F8F8F8;
 }
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
-    margin-top: 20px
 }
 
 /* Limit the size of a date in a grid */
@@ -149,9 +149,3 @@ dd > div > .form-control-static {
         flex-direction: column;
     }
 }
-
-
-
-
-
-@import "IntelliTectTheme.scss";
