--- a/src/Coalesce.Starter.Web/Views/Shared/_Layout.cshtml
+++ b/src/Coalesce.Starter.Web/Views/Shared/_Layout.cshtml
@@ -1,15 +1,14 @@
 ﻿@{
-    string applicationName = "Coalesce";
-    string fluid = "";
-    if (ViewBag.Fluid != null && ViewBag.Fluid == true) { fluid = "fluid"; }
+    string applicationName = "ApplicationName";
 }
 <!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewData["Title"] - Coalesce by IntelliTect</title>
-    @*<link href="~/lib/bootstrap/css/bootstrap.css" rel="stylesheet" />*@
+    <title>@ViewData["Title"] - My ASP.NET Application</title>
+
+    <link href="~/lib/bootstrap/css/bootstrap.css" rel="stylesheet" />
     <link href="~/css/site.css" rel="stylesheet" />
     <link href="~/lib/bootstrap-datetimepicker/css/bootstrap-datetimepicker.css" rel="stylesheet" />
     <link href="~/lib/select2/css/select2.css" rel="stylesheet" />
@@ -17,127 +16,33 @@
 
     @*<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>*@
 </head>
-<body class="@ViewBag.BodyClass">
-
-    <header role="banner">
+<body>
+    <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
-            <div class="row">
-                <nav class="navbar" role="navigation">
-
-
-                    <div class="col-lg-4 col-md-5 col-xs-8" style="padding-right: 0">
-                        <!-- text-right-->
-                        <h1 id="logo">
-                            <a href="/" class="coalesce-logo-text">
-                                Coalesce
-                            </a>
-                            <a href="http://www.intellitect.com/" class="intellitect-logo-text">
-                                <span style="font-size: 0.8em"> by</span> <span>IntelliTect</span>
-                            </a>
-                        </h1>
-                    </div>
-
-                    <div class="navbar-header col-xs-12 col-sm-12">
-                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapse">
-                            <span class="sr-only">Toggle navigation</span>
-
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                    </div>
-
-                    <div class="col-lg-8 col-md-7 col-xs-4 text-right">
-                        <div class="collapse navbar-collapse" id="collapse">
-                            <!-- navbar-collapse" id="collapse" -->
-                            <nav class="site-nav" role="navigation">
-
-                                <div class="menu-top-menu-container">
-                                    <ul id="menu-top-menu" class="nav">
-
-                                        <li><a asp-controller="Home" asp-action="Index">Home</a></li>
-                                        <li><a asp-controller="Home" asp-action="About">About</a></li>
-                                        <li><a asp-controller="Home" asp-action="Contact">Contact</a></li>
-
-                                    </ul>
-                                </div>
-
-                            </nav>
-                            <!--<hr/>-->
-                        </div>
-                    </div>
-                </nav>
-            </div><!-- End .row -->
-            <div class="row">
-                <div class="col-lg-12 col-md-10 col-lg-offset-1 col-md-offset-1 total-slider">
-
-                </div>
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a asp-controller="Home" asp-action="Index" asp-route-area="" class="navbar-brand">@applicationName</a>
             </div>
-        </div>
-    </header>
-
-    @*<div class="navbar navbar-inverse navbar-fixed-top">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a asp-controller="Home" asp-action="Index" asp-route-area="" class="navbar-brand">@applicationName</a>
-                </div>
-                <div class="navbar-collapse collapse">
+            <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li><a asp-controller="Home" asp-action="Index">Home</a></li>
-                        <li><a asp-controller="Demo" asp-action="Index">Demo</a></li>
-                        <li><a asp-controller="Home" asp-action="Generated">Generated Views</a></li>
-                        <li><a asp-controller="Docs" asp-action="Index">Documentation</a></li>
+                        <li><a asp-controller="Home" asp-action="About">About</a></li>
+                        <li><a asp-controller="Home" asp-action="Contact">Contact</a></li>
                     </ul>
                 </div>
-            </div>
-        </div>*@
-    <div class="container@(fluid) body-content">
-        @RenderBody()
-    </div>
-
-    <footer>
-        <div class="content">
-            <nav>
-                <div class="col-lg-5 col-sm-12 col-xs-12 site-nav clearfix">
-                    <div class="col-lg-11 col-sm-10 col-sm-offset-2 col-xs-12 first-blue-part">
-
-                        <div class="menu-footer-menu-links-container">
-                            <ul id="menu-footer-menu-links" class="menu">
-                                <li>
-                                    &copy; @DateTime.Now.Year - @applicationName
-                                    @if (!string.IsNullOrWhiteSpace(User.Identity.Name))
-                                    {
-                                        <span>- @User.Identity.Name</span>
-                                    }
-                                </li>
-                                @*<li><a href="/blog/">Blog</a></li>
-                                    <li><a href="/about/">About</a></li>*@
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-7 col-sm-12 col-xs-12 site-nav-secondary">
-                    <div class="col-lg-offset-1 col-lg-11 col-sm-10 col-sm-offset-2 col-xs-12 second-blue-part">
-
-                        <div class="menu-footer-secondary-container">
-                            <ul id="menu-footer-secondary" class="menu">
-                                @*<li><a href="tel:(555)555-5555">(555) 555-5555</a></li>
-                                    <li><a href="mailto:info@example.com">info@example.com</a></li>
-                                    <li><a href="/join-our-team/">Jobs</a></li>
-                                    <li><a href="/site-map/">Site map</a></li>*@
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </nav>
         </div>
-    </footer>
-
+    </div>
+    <div class="container body-content">
+        @RenderBody()
+        <hr />
+        <footer>
+            <p>&copy; @DateTime.Now.Year - @applicationName</p>
+        </footer>
+    </div>
     <script src="~/lib/jquery/jquery.js"></script>
     <script src="~/lib/bootstrap/js/bootstrap.js"></script>
     <script src="~/lib/knockout/knockout.js"></script>
@@ -146,20 +51,8 @@
     <script src="~/lib/select2/js/select2.js"></script>
     <script src="~/lib/bootstrap-datetimepicker/js/bootstrap-datetimepicker.min.js"></script>
     <script src="~/js/app.js" asp-append-version="true"></script>
-    <!-- Google Analytics -->
-    <script>
-        (function (i, s, o, g, r, a, m) {
-        i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-            (i[r].q = i[r].q || []).push(arguments)
-        }, i[r].l = 1 * new Date(); a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-        ga('create', 'UA-178624-5', 'auto');
-        ga('send', 'pageview');
-
-    </script>
-
+    <script>var baseUrl = '@Url.Content("~/")';</script>
     @RenderSection("Scripts", required: false)
 </body>
 </html>
