Setup everything via NPM packages and remove any refs to Bower.  Fixes #3

--- a/src/Coalesce.Starter.Web/Styles/site.scss
+++ b/src/Coalesce.Starter.Web/Styles/site.scss
@@ -3,11 +3,11 @@
                                    ==>><<==         */
 @import "./node_modules/bootswatch/flatly/_variables.scss";
 
-@import "../bower_components/bootstrap-sass/assets/stylesheets/_bootstrap";
-@import '../bower_components/components-font-awesome/scss/variables';
-@import '../bower_components/components-font-awesome/scss/core';
-@import '../bower_components/components-font-awesome/scss/icons';
-@import '../bower_components/components-font-awesome/scss/fixed-width';
+@import "./node_modules/bootstrap-sass/assets/stylesheets/_bootstrap";
+@import './node_modules/components-font-awesome/scss/variables';
+@import './node_modules/components-font-awesome/scss/core';
+@import './node_modules/components-font-awesome/scss/icons';
+@import './node_modules/components-font-awesome/scss/fixed-width';
 
 /* Change here to use a different Bootswatch theme
                                    ==>><<==         */
