--- a/src/Coalesce.Starter.Web/Views/Shared/_Layout.cshtml
+++ b/src/Coalesce.Starter.Web/Views/Shared/_Layout.cshtml
@@ -73,7 +73,9 @@
 
         Coalesce.GlobalConfiguration.app.select2Theme("bootstrap");
 
-    </script>
-    @RenderSection("Scripts", required: false)
+        $.fn.select2.defaults.set( "theme", "bootstrap" );
+
+</script>
+@RenderSection( "Scripts", required : false )
 </body>
 </html>
